<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Input fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingLeft="4dp">

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapWords" />

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal" />

        <!-- Quantity field -->
        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantity"
            android:inputType="number" />

        <!-- Supplier name field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords" />

        <!-- Supplier phone number field -->
        <EditText
            android:id="@+id/edit_supplier_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_supplier_number"
            android:inputType="phone" />
    </LinearLayout>
</LinearLayout>
